--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <header class="title">
                 <div class="left">
                     <h1>Venha conhecer Salvador</h1>
-                    <div class="description">...</div>
-                    <button>Saiba Mais</button>
+                    <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur auctor justo vel malesuada. Nunc pellentesque augue ut tincidunt scelerisque. 
+                    Aliquam mattis enim eu tempor tristique. Donec vitae tristique lectus, et elementum dolor. Vestibulum sed suscipit libero.</div>
+                    <button><a href="#" target="_blank">Saiba Mais</a></button>
                 </div>
                 <div class="right">
                     <img src="./images/barra.jpg" alt="Orla da Barra">
@@ -50,10 +51,10 @@
             <div class="cta">
                 <div class="message">
                     <h3>Venha!!!</h3>
-                    <div></div>
+                    <div>Reserve suas ferias e venha para a Bahia.</div>
                 </div>
 
-                <button>Saiba Mais</button>
+                <button><a href="#" target="_blank">Saiba Mais</a></button>
             </div>
         </div>
 
