Seção "Header" concluída

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="./styles.css">
         <meta charset="utf-8">
         <title>Salvador | Bahia</title>
+        
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap');
+        </style>
     </head>
 
     <body>
@@ -11,9 +15,9 @@
             <nav class="navigation">
                 <div>Header Logo</div>
                 <ul class="links">
-                    <li>Turismo</li>
-                    <li>Historia</li>
-                    <li>Fotos</li>
+                    <li><a href="#">Turismo</a></li>
+                    <li><a href="#">Historia</a></li>
+                    <li><a href="#">Fotos</a></li>
                 </ul>
             </nav>
 
@@ -25,36 +29,38 @@
                     <button><a href="#" target="_blank">Saiba Mais</a></button>
                 </div>
                 <div class="right">
-                    <img src="./images/barra.jpg" alt="Orla da Barra">
+                    <img src="./images/barra.jpg" alt="Orla da Barra" id="barra">
                 </div>
             </header>
         </div>
 
         <div class="content">
             <div class="gallery">
-                <h2>[...]Bahia de todos os santos, encantos e axé[...]</h2>
+                <h2>"[...]Bahia de todos os santos, encantos e axé[...]"</h2>
                 <div>
-                    <img src="./images/lacerda.jpg" alt="Vista do Elevador Lacerda">
-                    <img src="./images/fita.jpg" alt="Fitinhas do Senhor do Bonfim">
-                    <img src="./images/pelo.jpg" alt="Pelourinho">
-                    <img src="./images/itapua.jpg" alt="Farol de Itapuã">
+                    <img src="./images/lacerda.jpg" alt="Vista do Elevador Lacerda" id="lacerda">
+                    <img src="./images/fita.jpg" alt="Fitinhas do Senhor do Bonfim" id="fita">
+                    <img src="./images/pelo.jpg" alt="Pelourinho" id="pelo">
+                    <img src="./images/itapua.jpg" alt="Farol de Itapuã" id="itapua">
                 </div>
             </div>
 
             <article class="song">
-                <div class="lyrics">Ah, que bom você chegou, bem-vindo a Salvador, coração do Brasil! Vem, você vai conhecer a cidade de luz e prazer, correndo atrás do trio. 
-                    Vai compreender que o baiano um povo a mais de mil, ele tem Deus no seu coração e o Diabo no quadril!!
+                <div class="lyrics">"Ah, que bom você chegou, bem-vindo a Salvador, coração do Brasil! Vem, você vai conhecer a cidade de luz e prazer, correndo atrás do trio. 
+                    Vai compreender que o baiano um povo a mais de mil, ele tem Deus no seu coração e o Diabo no quadril!!""
                 </div>
-                <div class="song-name">- We are the world of Carnaval</div>
+                <div class="song-name"><span>- We are the world of Carnaval</span></div>
             </article>
 
             <div class="cta">
+                <div class="burrito">
                 <div class="message">
                     <h3>Venha!!!</h3>
                     <div>Reserve suas ferias e venha para a Bahia.</div>
                 </div>
 
                 <button><a href="#" target="_blank">Saiba Mais</a></button>
+                </div>
             </div>
         </div>
 
