Content e Footer alinhados
- Pequenas mudanças no <title> e no "logo" do .header
- Box formatadas e alinhadas
- Footer adicionado
- Precisei de uma gambiarra pro Footer, não consegui crescer a box
- Projeto finalizado

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="./styles.css">
         <meta charset="utf-8">
-        <title>Salvador | Bahia</title>
+        <title>Conheça Salvador</title>
         
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap');
@@ -13,19 +13,18 @@
     <body>
         <div class="header">
             <nav class="navigation">
-                <div>Header Logo</div>
+                <div>Salvador</div>
                 <ul class="links">
-                    <li><a href="#">Turismo</a></li>
-                    <li><a href="#">Historia</a></li>
-                    <li><a href="#">Fotos</a></li>
+                    <li><a href="#" target="_blank">Turismo</a></li>
+                    <li><a href="#" target="_blank">Historia</a></li>
+                    <li><a href="#" target="_blank">Fotos</a></li>
                 </ul>
             </nav>
 
             <header class="title">
                 <div class="left">
                     <h1>Venha conhecer Salvador</h1>
-                    <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur auctor justo vel malesuada. Nunc pellentesque augue ut tincidunt scelerisque. 
-                    Aliquam mattis enim eu tempor tristique. Donec vitae tristique lectus, et elementum dolor. Vestibulum sed suscipit libero.</div>
+                    <div class="description">Berço da história do país, lar de uma multiplicidade cultural única. Venha conhecer a primeira capital do Brasil.</div>
                     <button><a href="#" target="_blank">Saiba Mais</a></button>
                 </div>
                 <div class="right">
@@ -65,7 +64,7 @@
         </div>
 
         <div class="footer">
-            <div><a href="https://github.com/b4yerl" target="_blank">Guilherme Bayerl</a></div>
+            <div class="github-link"><a href="https://github.com/b4yerl" target="_blank">Guilherme Bayerl @ TOP2022</a></div>
         </div>
     </body>
 </html>
